pgen/y.output
   0  $accept : spec $end

   1  spec : defs MARK rules

   2  defs :
   3       | defs def

   4  def : NODE nlist

   5  nlist : yid
   6        | nlist yid
   7        | nlist ',' yid

   8  yid : IDENTIFIER
   9      | LITERAL

  10  rules : rule
  11        | rules rule

  12  rule : IDENTIFIER OR rbody ';'
  13       | IDENTIFIER OR rbody ACTION STRING ';'
  14       | IDENTIFIER OR rbody or ';'
  15       | IDENTIFIER OR rbody ACTION STRING or ';'

  16  or : OR rbody
  17     | OR rbody ACTION STRING
  18     | or OR rbody
  19     | or OR rbody ACTION STRING

  20  rbody :
  21        | rexp

  22  rexp : term
  23       | PIPE term
  24       | rexp PIPE term

  25  term : fact
  26       | term fact

  27  fact : prim
  28       | prim rop

  29  prim : yid
  30       | '(' rexp ')'

  31  rop : PLUS
  32      | STAR
  33      | QUESTION
  34      | LIST prim

state 0
	$accept : . spec $end  (0)
	defs : .  (2)

	.  reduce 2

	spec  goto 1
	defs  goto 2


state 1
	$accept : spec . $end  (0)

	$end  accept


state 2
	spec : defs . MARK rules  (1)
	defs : defs . def  (3)

	MARK  shift 3
	NODE  shift 4
	.  error

	def  goto 5


state 3
	spec : defs MARK . rules  (1)

	IDENTIFIER  shift 6
	.  error

	rules  goto 7
	rule  goto 8


state 4
	def : NODE . nlist  (4)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	.  error

	nlist  goto 11
	yid  goto 12


state 5
	defs : defs def .  (3)

	.  reduce 3


state 6
	rule : IDENTIFIER . OR rbody ';'  (12)
	rule : IDENTIFIER . OR rbody ACTION STRING ';'  (13)
	rule : IDENTIFIER . OR rbody or ';'  (14)
	rule : IDENTIFIER . OR rbody ACTION STRING or ';'  (15)

	OR  shift 13
	.  error


state 7
	spec : defs MARK rules .  (1)
	rules : rules . rule  (11)

	IDENTIFIER  shift 6
	$end  reduce 1

	rule  goto 14


state 8
	rules : rule .  (10)

	.  reduce 10


state 9
	yid : IDENTIFIER .  (8)

	.  reduce 8


state 10
	yid : LITERAL .  (9)

	.  reduce 9


state 11
	def : NODE nlist .  (4)
	nlist : nlist . yid  (6)
	nlist : nlist . ',' yid  (7)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	','  shift 15
	MARK  reduce 4
	NODE  reduce 4

	yid  goto 16


state 12
	nlist : yid .  (5)

	.  reduce 5


state 13
	rule : IDENTIFIER OR . rbody ';'  (12)
	rule : IDENTIFIER OR . rbody ACTION STRING ';'  (13)
	rule : IDENTIFIER OR . rbody or ';'  (14)
	rule : IDENTIFIER OR . rbody ACTION STRING or ';'  (15)
	rbody : .  (20)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	PIPE  shift 17
	'('  shift 18
	OR  reduce 20
	ACTION  reduce 20
	';'  reduce 20

	yid  goto 19
	rbody  goto 20
	rexp  goto 21
	term  goto 22
	fact  goto 23
	prim  goto 24


state 14
	rules : rules rule .  (11)

	.  reduce 11


state 15
	nlist : nlist ',' . yid  (7)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	.  error

	yid  goto 25


state 16
	nlist : nlist yid .  (6)

	.  reduce 6


state 17
	rexp : PIPE . term  (23)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	'('  shift 18
	.  error

	yid  goto 19
	term  goto 26
	fact  goto 23
	prim  goto 24


state 18
	prim : '(' . rexp ')'  (30)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	PIPE  shift 17
	'('  shift 18
	.  error

	yid  goto 19
	rexp  goto 27
	term  goto 22
	fact  goto 23
	prim  goto 24


state 19
	prim : yid .  (29)

	.  reduce 29


state 20
	rule : IDENTIFIER OR rbody . ';'  (12)
	rule : IDENTIFIER OR rbody . ACTION STRING ';'  (13)
	rule : IDENTIFIER OR rbody . or ';'  (14)
	rule : IDENTIFIER OR rbody . ACTION STRING or ';'  (15)

	OR  shift 28
	ACTION  shift 29
	';'  shift 30
	.  error

	or  goto 31


state 21
	rbody : rexp .  (21)
	rexp : rexp . PIPE term  (24)

	PIPE  shift 32
	OR  reduce 21
	ACTION  reduce 21
	';'  reduce 21


state 22
	rexp : term .  (22)
	term : term . fact  (26)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	'('  shift 18
	OR  reduce 22
	ACTION  reduce 22
	PIPE  reduce 22
	';'  reduce 22
	')'  reduce 22

	yid  goto 19
	fact  goto 33
	prim  goto 24


state 23
	term : fact .  (25)

	.  reduce 25


state 24
	fact : prim .  (27)
	fact : prim . rop  (28)

	LIST  shift 34
	STAR  shift 35
	PLUS  shift 36
	QUESTION  shift 37
	OR  reduce 27
	ACTION  reduce 27
	IDENTIFIER  reduce 27
	LITERAL  reduce 27
	PIPE  reduce 27
	';'  reduce 27
	'('  reduce 27
	')'  reduce 27

	rop  goto 38


state 25
	nlist : nlist ',' yid .  (7)

	.  reduce 7


state 26
	rexp : PIPE term .  (23)
	term : term . fact  (26)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	'('  shift 18
	OR  reduce 23
	ACTION  reduce 23
	PIPE  reduce 23
	';'  reduce 23
	')'  reduce 23

	yid  goto 19
	fact  goto 33
	prim  goto 24


state 27
	rexp : rexp . PIPE term  (24)
	prim : '(' rexp . ')'  (30)

	PIPE  shift 32
	')'  shift 39
	.  error


state 28
	or : OR . rbody  (16)
	or : OR . rbody ACTION STRING  (17)
	rbody : .  (20)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	PIPE  shift 17
	'('  shift 18
	OR  reduce 20
	ACTION  reduce 20
	';'  reduce 20

	yid  goto 19
	rbody  goto 40
	rexp  goto 21
	term  goto 22
	fact  goto 23
	prim  goto 24


state 29
	rule : IDENTIFIER OR rbody ACTION . STRING ';'  (13)
	rule : IDENTIFIER OR rbody ACTION . STRING or ';'  (15)

	STRING  shift 41
	.  error


state 30
	rule : IDENTIFIER OR rbody ';' .  (12)

	.  reduce 12


state 31
	rule : IDENTIFIER OR rbody or . ';'  (14)
	or : or . OR rbody  (18)
	or : or . OR rbody ACTION STRING  (19)

	OR  shift 42
	';'  shift 43
	.  error


state 32
	rexp : rexp PIPE . term  (24)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	'('  shift 18
	.  error

	yid  goto 19
	term  goto 44
	fact  goto 23
	prim  goto 24


state 33
	term : term fact .  (26)

	.  reduce 26


state 34
	rop : LIST . prim  (34)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	'('  shift 18
	.  error

	yid  goto 19
	prim  goto 45


state 35
	rop : STAR .  (32)

	.  reduce 32


state 36
	rop : PLUS .  (31)

	.  reduce 31


state 37
	rop : QUESTION .  (33)

	.  reduce 33


state 38
	fact : prim rop .  (28)

	.  reduce 28


state 39
	prim : '(' rexp ')' .  (30)

	.  reduce 30


state 40
	or : OR rbody .  (16)
	or : OR rbody . ACTION STRING  (17)

	ACTION  shift 46
	OR  reduce 16
	';'  reduce 16


state 41
	rule : IDENTIFIER OR rbody ACTION STRING . ';'  (13)
	rule : IDENTIFIER OR rbody ACTION STRING . or ';'  (15)

	OR  shift 28
	';'  shift 47
	.  error

	or  goto 48


state 42
	or : or OR . rbody  (18)
	or : or OR . rbody ACTION STRING  (19)
	rbody : .  (20)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	PIPE  shift 17
	'('  shift 18
	OR  reduce 20
	ACTION  reduce 20
	';'  reduce 20

	yid  goto 19
	rbody  goto 49
	rexp  goto 21
	term  goto 22
	fact  goto 23
	prim  goto 24


state 43
	rule : IDENTIFIER OR rbody or ';' .  (14)

	.  reduce 14


state 44
	rexp : rexp PIPE term .  (24)
	term : term . fact  (26)

	IDENTIFIER  shift 9
	LITERAL  shift 10
	'('  shift 18
	OR  reduce 24
	ACTION  reduce 24
	PIPE  reduce 24
	';'  reduce 24
	')'  reduce 24

	yid  goto 19
	fact  goto 33
	prim  goto 24


state 45
	rop : LIST prim .  (34)

	.  reduce 34


state 46
	or : OR rbody ACTION . STRING  (17)

	STRING  shift 50
	.  error


state 47
	rule : IDENTIFIER OR rbody ACTION STRING ';' .  (13)

	.  reduce 13


state 48
	rule : IDENTIFIER OR rbody ACTION STRING or . ';'  (15)
	or : or . OR rbody  (18)
	or : or . OR rbody ACTION STRING  (19)

	OR  shift 42
	';'  shift 51
	.  error


state 49
	or : or OR rbody .  (18)
	or : or OR rbody . ACTION STRING  (19)

	ACTION  shift 52
	OR  reduce 18
	';'  reduce 18


state 50
	or : OR rbody ACTION STRING .  (17)

	.  reduce 17


state 51
	rule : IDENTIFIER OR rbody ACTION STRING or ';' .  (15)

	.  reduce 15


state 52
	or : or OR rbody ACTION . STRING  (19)

	STRING  shift 53
	.  error


state 53
	or : or OR rbody ACTION STRING .  (19)

	.  reduce 19


19 terminals, 15 nonterminals
35 grammar rules, 54 states
